--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependecies
       run: npm install
     - name: Run Linter
-      run: npm run linter
+      run: npm run lint
     - name: Run Formatter
       run: npm run prettier
     - name: Test
